# LEVEL-IIA

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
CRI_Perspective/Tables/: operating_characteristics_design.tex  operating_characteristics_outcomes.tex  worked_decision_example.tex
configs/: _common.yaml  adversarial_null.yaml  anchor.yaml  collider_selection.yaml  injected_residual.yaml  leakage.yaml  opposite_direction.yaml  selection.yaml
docs/: methods_validation.md  reviewer_reproduction_guide.md  submission_readiness.md
manuscript/: main_corrected.tex  si_corrected.tex
manuscript/tables/: collider_sweep.tex  operating_characteristics.tex  operating_characteristics_design.tex  operating_characteristics_outcomes.tex
outputs/: LATEST_RUN.txt  README.md
outputs/0a775ac4f1ead9d3/metadata/: run_metadata.json
outputs/0a775ac4f1ead9d3/raw/: adversarial_null.csv  anchor.csv  collider_selection.csv  injected_residual.csv  leakage.csv  selection.csv  (+1 more)
scripts/: make_figure2.py  make_split_oc_tables.py  make_tables.py  make_worked_example.py  run_all.py  run_benchmark.py  verify_outputs.py
src/cri_leveliia/: __init__.py  audits.py  benchmarks.py  collider.py  comparator.py  dgp.py  figures.py  formatting.py  inference.py  metadata.py  selection.py  tables.py
tests/: conftest.py  test_beta_min.py  test_collider_selection.py  test_decision_branches.py  test_decision_precedence.py  test_endpoint_injection.py  test_formatting.py  test_randomisation.py  test_reproducibility_smoke.py  test_selection_gate.py
(+44 files in other folders)
